--- a/pages/history.html
+++ b/pages/history.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>la luvre</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <title>la history</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/heart_style.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -20,62 +21,38 @@
 
     <!-- Название "Louvre" по центру -->
     <div class="logo">
-        <a href="index.html"><h1>Louvre</h1></a>
+        <a href="../index.html"><h1>Louvre</h1></a>
     </div>
 
     <!-- Контактный номер телефона -->
 
-    <a href="tel:33 1 40 20 50 50">
-        <div class="contact">+33 1 40 20 50 50</div>
-    </a>
+    <a href="tel:33 1 40 20 50 50"><div class="contact">+33 1 40 20 50 50</div></a>
 </header>
 
 <!-- Меню навигации -->
 <nav class="menu">
-    <a href="pages/menubar/exhibitions.html">Exhibitions</a>
-    <a href="pages/menubar/schedule.html">Schedule</a>
-    <a href="pages/menubar/tickets-info.html">Buy Tickets</a>
-
+    <a href="../pages/menubar/exhibitions.html">Exhibitions</a>
+    <a href="../pages/menubar/schedule.html">Schedule</a>
+    <a href="../pages/menubar/tickets-info.html">Buy Tickets</a>
 </nav>
-
 
 <div id="xs-deliver" class="text-center visible-xs"></div>
 
-<div class="jumbotron">
-    <!--      <img src="images/jumbotron_768.png" alt="Picture of restaurant" class="img-responsive visible-xs">-->
-    <video autoplay muted loop playsinline class="jumbotron-video">
-        <!--      <source src="videos/jumbotron_video_768.mp4" type="video/mp4">-->
-        <!-- Резервное изображение для старых браузеров -->
-        <img src="images/jumbotron_768.png" alt="Picture of restaurant" class="img-responsive">
-    </video>
-</div>
+<div class="justify-center mx-auto mb-24">
+    <article class="rounded h-full lg:h-48 my-8">
+        <a href="../pages/epochs/anc.html">
+            <img src="../images/hist.jpg" alt="" class="block relative lg:float-left h-48 w-full lg:w-auto rounded-l lg:pr-8">
 
-<div id="main-content" class="container">
-
-
-</div>
-
-<div id="home-tiles" class="row">
-    <div class="col-md-4 col-sm-6 col-xs-12">
-        <a href="pages/heart.html">
-            <div id="menu-tile"><span>Immerse yourself in the heart of the Louvre</span></div>
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6 col-xs-12">
-        <a href="pages/history.html">
-            <div id="specials-tile"><span>History</span></div>
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-12 col-xs-12">
-        <a href="https://www.google.com/maps/place/Лувр/@48.8606146,2.3350691,17z/data=!3m2!4b1!5s0x47f112d46c2f6eef:0xfb8a933f53aec2c6!4m6!3m5!1s0x47e671d877937b0f:0xb975fcfa192f84d4!8m2!3d48.8606111!4d2.337644!16zL20vMDRnZHI?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D"
-           target="_blank">
-            <div id="map-tile">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3132.377550245932!2d2.3351084870978265!3d48.860270026110456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671d877937b0f%3A0xb975fcfa192f84d4!2z0JvRg9Cy0YA!5e0!3m2!1sru!2skz!4v1735241873687!5m2!1sru!2skz" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-                <span>Location</span>
+            <div href="../pages/epochs/anc.html">
+                <h3 class="text-2xl font-semibold py-4 pr-8">Our History</h3>
+                <p class="text-base mb-4">The Louvre, originally a royal palace, became a public museum in 1793. It is the world’s largest art museum, housing masterpieces like the Mona Lisa. With centuries of history, it remains a symbol of cultural heritage and artistic excellence.</p>
+                <small class="text-base ml-2"><i class="fas fa-calendar-alt"></i> August 10, 1793</small>
             </div>
         </a>
-    </div>
+    </article>
 </div>
+
+
 <footer class="panel-footer">
     <div class="container">
         <div class="row">
@@ -109,11 +86,8 @@
 
 
 <!-- jQuery (Bootstrap JS plugins depend on it) -->
-<script src="js/jquery-2.1.4.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/script.js"></script>
-<script src="js/script.js"></script>
-
-
+<script src="../js/jquery-2.1.4.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
