--- a/pages/history.html
+++ b/pages/history.html
@@ -40,7 +40,7 @@
 
 <div class="justify-center mx-auto mb-24">
     <article class="rounded h-full lg:h-48 my-8">
-        <a href="../pages/epochs/anc.html">
+        <a href="">
             <img src="../images/hist.jpg" alt="" class="block relative lg:float-left h-48 w-full lg:w-auto rounded-l lg:pr-8">
 
             <div href="../pages/epochs/anc.html">
